--- a/app/templates/page-layout.hbs
+++ b/app/templates/page-layout.hbs
@@ -11,50 +11,45 @@
 		<meta name="description" content="{{description}}">
 		<meta name="keywords" content="{{keywords}}">
 
-    <title>{{{title}}}</title>
+    	<title>{{{title}}}</title>
 
 		<!-- Fonts -->
 		<link href='https://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+    	<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700' rel='stylesheet' type='text/css'>
 
 		<link href="{{relativePath}}assets/css/styles.css" rel="stylesheet"/>
 
-    {{> favicon}}
+    	{{> favicon}}
 	</head>
 
 	<body class="disable-transition-load">
-    <header>
-      {{> header}}
-    </header>
+	    
+	    <header>
+	      {{> header}}
+	    </header>
 
-    <nav>
-      {{> nav}}
-    </nav>
+	    <nav>
+	      {{> nav}}
+	    </nav>
 
 		{{> body}}
 
-    <footer>
+	    <footer>
 			{{> footer}}
-    </footer>
+	    </footer>
 		
-    <!--
-      If wiredep has run, go through and prepend each src with: {{relativePath}}
-      -->
-		<!-- bower:js -->
-		<script src="{{relativePath}}vendor/modernizr/modernizr.js"></script>
-		<script src="{{relativePath}}vendor/jquery/dist/jquery.js"></script>
-		<script src="{{relativePath}}vendor/jquery.easing/js/jquery.easing.js"></script>
-		<script src="{{relativePath}}vendor/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
-		<script src="{{relativePath}}vendor/bootstrap-select/dist/js/bootstrap-select.js"></script>
-		<script src="{{relativePath}}vendor/eventEmitter/EventEmitter.js"></script>
-		<script src="{{relativePath}}vendor/eventie/eventie.js"></script>
-		<script src="{{relativePath}}vendor/hammerjs/hammer.js"></script>
-		<script src="{{relativePath}}vendor/imagesloaded/imagesloaded.js"></script>
-		<script src="{{relativePath}}vendor/jqBootstrapValidation/dist/jqBootstrapValidation-1.3.7.min.js"></script>
-		<script src="{{relativePath}}vendor/lodash/lodash.js"></script>
-		<script src="{{relativePath}}vendor/verge/verge.js"></script>
-		<!-- endbower -->
+    	<script src="vendor/modernizr/modernizr.js"></script>
+		<script src="vendor/jquery/dist/jquery.js"></script>
+		<script src="vendor/jquery.easing/js/jquery.easing.js"></script>
+		<script src="vendor/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
+		<script src="vendor/eventEmitter/EventEmitter.js"></script>
+		<script src="vendor/eventie/eventie.js"></script>
+		<script src="vendor/hammerjs/hammer.js"></script>
+		<script src="vendor/imagesloaded/imagesloaded.js"></script>
+		<script src="vendor/jqBootstrapValidation/dist/jqBootstrapValidation-1.3.7.min.js"></script>
+		<script src="vendor/lodash/lodash.js"></script>
+		<script src="vendor/verge/verge.js"></script>
 
 		<!-- Utility scripts -->
 		<script src="{{relativePath}}assets/js/utils.js"></script>
