Adding Foundation, leaving Bootstrap

--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -3,7 +3,8 @@
 @import "variables/social-share";
 
 // Vendor
-@import "vendor/bootstrap";
+// @import "../vendor/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "../vendor/foundation/scss/foundation";
 
 // Mixins
 @import "mixins/colors";
